--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Gas App</title>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
   <body>
     <div id="root"></div>
